PFC/Yocto_Infor/yocto_TXT/output_395.txt
* [meta-rockchip] [PATCH] trusted-firmware-a: add Upstream-Status to .patch file
@ 2023-06-26 19:07 Martin Jansa
  2023-07-03  4:39 ` [yocto] " Khem Raj
  0 siblings, 1 reply; 3+ messages in thread
From: Martin Jansa @ 2023-06-26 19:07 UTC (permalink / raw)
  To: yocto; +Cc: twoerner, Martin Jansa

Signed-off-by: Martin Jansa <Martin.Jansa@gmail.com>
---
 .../files/0001-dram-Fix-build-with-gcc-11.patch                  | 1 +
 1 file changed, 1 insertion(+)

diff --git a/recipes-bsp/trusted-firmware-a/files/0001-dram-Fix-build-with-gcc-11.patch b/recipes-bsp/trusted-firmware-a/files/0001-dram-Fix-build-with-gcc-11.patch
index 14defed..94ca8e2 100644
--- a/recipes-bsp/trusted-firmware-a/files/0001-dram-Fix-build-with-gcc-11.patch
+++ b/recipes-bsp/trusted-firmware-a/files/0001-dram-Fix-build-with-gcc-11.patch
@@ -12,6 +12,7 @@ plat/rockchip/rk3399/drivers/dram/dram_spec_timing.c:781:11: error: explicitly a
                 ~~~~~~~ ^ ~~~~~~~
 
 Signed-off-by: Khem Raj <raj.khem@gmail.com>
+Upstream-Status: Pending
 ---
  plat/rockchip/rk3399/drivers/dram/dram_spec_timing.c | 2 +-
  1 file changed, 1 insertion(+), 1 deletion(-)
-- 
2.41.0



^ permalink raw reply related	[flat|nested] 3+ messages in thread
* Re: [yocto] [meta-rockchip] [PATCH] trusted-firmware-a: add Upstream-Status to .patch file
  2023-06-26 19:07 [meta-rockchip] [PATCH] trusted-firmware-a: add Upstream-Status to .patch file Martin Jansa
@ 2023-07-03  4:39 ` Khem Raj
  2023-07-05 22:29   ` Trevor Woerner
  0 siblings, 1 reply; 3+ messages in thread
From: Khem Raj @ 2023-07-03  4:39 UTC (permalink / raw)
  To: Martin Jansa; +Cc: yocto, twoerner

I sent a similar fix few weeks ago

https://lists.yoctoproject.org/g/yocto/topic/meta_rockchip_patch/99688580?p=,,,100,0,0,0::recentpostdate/sticky,,,100,2,0,99688580,previd%3D1688329845307017082,nextid%3D1686842669287400371&previd=1688329845307017082&nextid=1686842669287400371

On Mon, Jun 26, 2023 at 12:07 PM Martin Jansa <Martin.Jansa@gmail.com> wrote:
>
> Signed-off-by: Martin Jansa <Martin.Jansa@gmail.com>
> ---
>  .../files/0001-dram-Fix-build-with-gcc-11.patch                  | 1 +
>  1 file changed, 1 insertion(+)
>
> diff --git a/recipes-bsp/trusted-firmware-a/files/0001-dram-Fix-build-with-gcc-11.patch b/recipes-bsp/trusted-firmware-a/files/0001-dram-Fix-build-with-gcc-11.patch
> index 14defed..94ca8e2 100644
> --- a/recipes-bsp/trusted-firmware-a/files/0001-dram-Fix-build-with-gcc-11.patch
> +++ b/recipes-bsp/trusted-firmware-a/files/0001-dram-Fix-build-with-gcc-11.patch
> @@ -12,6 +12,7 @@ plat/rockchip/rk3399/drivers/dram/dram_spec_timing.c:781:11: error: explicitly a
>                  ~~~~~~~ ^ ~~~~~~~
>
>  Signed-off-by: Khem Raj <raj.khem@gmail.com>
> +Upstream-Status: Pending
>  ---
>   plat/rockchip/rk3399/drivers/dram/dram_spec_timing.c | 2 +-
>   1 file changed, 1 insertion(+), 1 deletion(-)
> --
> 2.41.0
>
>
> -=-=-=-=-=-=-=-=-=-=-=-
> Links: You receive all messages sent to this group.
> You automatically follow any topics you start or reply to.
> View/Reply Online (#60451): https://lists.yoctoproject.org/g/yocto/message/60451
> Mute This Topic: https://lists.yoctoproject.org/mt/99795035/1997914
> Group Owner: yocto+owner@lists.yoctoproject.org
> Unsubscribe: https://lists.yoctoproject.org/g/yocto/unsub [raj.khem@gmail.com]
> -=-=-=-=-=-=-=-=-=-=-=-
>


^ permalink raw reply	[flat|nested] 3+ messages in thread
* Re: [yocto] [meta-rockchip] [PATCH] trusted-firmware-a: add Upstream-Status to .patch file
  2023-07-03  4:39 ` [yocto] " Khem Raj
@ 2023-07-05 22:29   ` Trevor Woerner
  0 siblings, 0 replies; 3+ messages in thread
From: Trevor Woerner @ 2023-07-05 22:29 UTC (permalink / raw)
  To: Khem Raj; +Cc: Martin Jansa, yocto

On Sun 2023-07-02 @ 09:39:50 PM, Khem Raj wrote:
> I sent a similar fix few weeks ago

Sorry, I saw the patch, but then forgot about it :-(

I gave both of you credit and applied it on master. Does it need to go
anywhere else?

Thank you, both, for the patches!

> 
> https://lists.yoctoproject.org/g/yocto/topic/meta_rockchip_patch/99688580?p=,,,100,0,0,0::recentpostdate/sticky,,,100,2,0,99688580,previd%3D1688329845307017082,nextid%3D1686842669287400371&previd=1688329845307017082&nextid=1686842669287400371
> 
> On Mon, Jun 26, 2023 at 12:07 PM Martin Jansa <Martin.Jansa@gmail.com> wrote:
> >
> > Signed-off-by: Martin Jansa <Martin.Jansa@gmail.com>
> > ---
> >  .../files/0001-dram-Fix-build-with-gcc-11.patch                  | 1 +
> >  1 file changed, 1 insertion(+)
> >
> > diff --git a/recipes-bsp/trusted-firmware-a/files/0001-dram-Fix-build-with-gcc-11.patch b/recipes-bsp/trusted-firmware-a/files/0001-dram-Fix-build-with-gcc-11.patch
> > index 14defed..94ca8e2 100644
> > --- a/recipes-bsp/trusted-firmware-a/files/0001-dram-Fix-build-with-gcc-11.patch
> > +++ b/recipes-bsp/trusted-firmware-a/files/0001-dram-Fix-build-with-gcc-11.patch
> > @@ -12,6 +12,7 @@ plat/rockchip/rk3399/drivers/dram/dram_spec_timing.c:781:11: error: explicitly a
> >                  ~~~~~~~ ^ ~~~~~~~
> >
> >  Signed-off-by: Khem Raj <raj.khem@gmail.com>
> > +Upstream-Status: Pending
> >  ---
> >   plat/rockchip/rk3399/drivers/dram/dram_spec_timing.c | 2 +-
> >   1 file changed, 1 insertion(+), 1 deletion(-)
> > --
> > 2.41.0
> >
> >
> > -=-=-=-=-=-=-=-=-=-=-=-
> > Links: You receive all messages sent to this group.
> > You automatically follow any topics you start or reply to.
> > View/Reply Online (#60451): https://lists.yoctoproject.org/g/yocto/message/60451
> > Mute This Topic: https://lists.yoctoproject.org/mt/99795035/1997914
> > Group Owner: yocto+owner@lists.yoctoproject.org
> > Unsubscribe: https://lists.yoctoproject.org/g/yocto/unsub [raj.khem@gmail.com]
> > -=-=-=-=-=-=-=-=-=-=-=-
> >


^ permalink raw reply	[flat|nested] 3+ messages in thread
end of thread, other threads:[~2023-07-05 22:29 UTC | newest]

Thread overview: 3+ messages (download: mbox.gz / follow: Atom feed)
-- links below jump to the message on this page --
2023-06-26 19:07 [meta-rockchip] [PATCH] trusted-firmware-a: add Upstream-Status to .patch file Martin Jansa
2023-07-03  4:39 ` [yocto] " Khem Raj
2023-07-05 22:29   ` Trevor Woerner

